plugins/javaFX/testData/highlighting/primitiveSubtags.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.image.*?>
<ImageView id="lock" pickOnBounds="true">
  <<error descr="Element geomBoundsInvalid is not allowed here">geomBoundsInvalid</error>/>
</ImageView>
